; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_sync-mgr.c_on_repo_deleted_on_server.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_sync-mgr.c_on_repo_deleted_on_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32 }

@SYNC_ERROR_ID_SERVER_REPO_DELETED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"repo %s(%.8s) not found on server\0A\00", align 1
@seaf = common dso_local global %struct.TYPE_7__* null, align 8
@.str.1 = private unnamed_addr constant [50 x i8] c"remove repo %s(%.8s) since it's deleted on relay\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_6__*)* @on_repo_deleted_on_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_repo_deleted_on_server(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @SYNC_ERROR_ID_SERVER_REPO_DELETED, align 4
  %7 = call i32 @set_task_error(i32* %5, i32 %6)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @seaf_warning(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13)
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** @seaf, align 8
  %16 = call i32 @seafile_session_config_get_allow_repo_not_found_on_server(%struct.TYPE_7__* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %31, label %18

18:                                               ; preds = %2
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @seaf_message(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0), i32 %21, i32 %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** @seaf, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %30 = call i32 @seaf_repo_manager_del_repo(i32 %28, %struct.TYPE_6__* %29)
  br label %31

31:                                               ; preds = %18, %2
  ret void
}

declare dso_local i32 @set_task_error(i32*, i32) #1

declare dso_local i32 @seaf_warning(i8*, i32, i32) #1

declare dso_local i32 @seafile_session_config_get_allow_repo_not_found_on_server(%struct.TYPE_7__*) #1

declare dso_local i32 @seaf_message(i8*, i32, i32) #1

declare dso_local i32 @seaf_repo_manager_del_repo(i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
